--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -930,7 +930,7 @@
 	<key>Print In Black And White</key>
 	<true/>
 	<key>ShowFullScreenTabBar</key>
-	<false/>
+	<true/>
 	<key>SoundForEsc</key>
 	<false/>
 	<key>UseLionStyleFullscreen</key>
